--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
+    "start":"nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
